--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,5 @@
-
-@import "_content";
-@import "_general";
 @import "_commons";
-@import "_header";
+@import "_fonts";
+@import "_navBar";
+@import "_content";
+@import "_footer";
